メモ書きに数式の例を追加

--- a/メモ書き.md
+++ b/メモ書き.md
@@ -19,3 +19,31 @@
 つまり、先ほどのユークリッド距離の場合、`d = \sqrt{x^2+y^2}`という式を解析し、それを変数にあらかじめ格納しておき、呼び出す側ではx,yに適切な式を当てはめて変換するだけである。
 
 他の例として、分数の加算は、`a/b + c/d = (a*d + b*c) / (b*d)`という式を解析しておき、呼び出す側は`a/b + c/d`にした式を渡すことで、右辺側に変換する事が可能。
+
+```
+a*0 = 0
+a*(b+1) = a*b + a 
+```
+
+```
+b = 5
+a*(5-1) = a*4 + a
+a*4 = a*(4-1)+a = a*(3)+a
+```
+
+```
+a*a=b
+a = \sqrt[2]{b}
+
+a*a*a = c
+a =     
+
+a^0 = 1
+a^(b+1) = a^b * a
+```
+```
+a+b = c
+c-b = a
+
+
+```
